--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: fuzzyqd2
 channels:
   - conda-forge
 dependencies:
-  # Python
+  # Python runtime
   - python>=3.9
   - numpy>=1.22
   - scipy>=1.10
@@ -10,8 +10,8 @@ dependencies:
   - pymatgen>=2024.0
   - seekpath>=2.1
 
-  # Build toolchain (from conda-forge)
-  - compilers
+  # Build toolchain
+  - compilers        # C/C++ compilers
   - cmake>=3.22
   - ninja
 
@@ -19,7 +19,7 @@ dependencies:
   - pybind11>=2.12
   - eigen
   - libint>=2.6
-  - boost             # <--- ADD BOOST HERE
+  - boost
 
   - pip
 
