--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = [
   "setuptools>=64",
   "wheel",
   "cmake>=3.22",
+  "ninja; platform_system != 'Windows'",
   "pybind11>=2.12",
   "numpy>=1.22",
 ]
